@@ -1,5 +1,5 @@
 
-\version "2.3.16"
+\version "2.3.17"
 \header {
 
     texidoc ="Space from a normal note (or barline) to a grace note is
@@ -12,7 +12,7 @@
     { \time 2/4
       \relative c'' {
 	  e8 e \grace d8 e e \grace f8 e es, d' d
-	  e8 e e e \grace { \stemDown f8 \stemBoth } e es, d'
+	  e8 e e e \grace { \stemDown f8 \stemNeutral } e es, d'
 
 		  }  
 
