@@ -1,7 +1,7 @@
 %{
 
  Common catalan names for notes. "b" means flat (bemoll), "d" means sharp (diesi).
- Also "s" is included for sharp (sostingut).  Both "diesi" and "sostingut" are approved
+ Also "s" is included for sharp (sostingut).  Neutral "diesi" and "sostingut" are approved
  by "Diccionari de la Llengua Catalana" from "Institut d'Estudis Catalans".
 
  Adapted from italiano.ly.
@@ -73,6 +73,6 @@ pitchnamesCatalan = #`(
 
 pitchnames = \pitchnamesCatalan
 
-\version "2.3.16"
+\version "2.3.17"
 
 #(ly:parser-set-note-names parser pitchnames)
